# raw_to_classification

./: .gitattributes  .gitignore  0_inspect.py  1_dataset2bids.py  2_participants.py  2_preprocess.py  3_features.py  3_preprocess.py  3b_prepInspection.py  3b_preprocessing_inspection.py  4_features.py  5.5_aggregateInspection.py  5_aggregate.py  5_aggregateInspection.py  6_harmonization.py  6_scalingAndFolding.py  6b_scalingAndFoldingInspection.py  6old_harmonization.py  7_classification.py  7_ml.py  7b_exploratoryAnalysis.py  7old_classification.py  8_postAnalysis.py  MANIFEST.in  README.md  datasets.yml  datasets_complexity.yml  datasets_r2c.yml  datasets_saint.yml  do.sh  fooof_test.py  library_count.txt  pickle_something.py  pipeline.yml  pipeline_complexity.yml  pipeline_r2c.yml  pipeline_saint.yml  requirements.txt  requirements_extra.txt  requirements_minimal.txt  (+4 more)
eeg_raw_to_classification/: _version.py  features.py  loggers.py  preprocessing.py  utils.py
jobs/: array_features.sh  array_features_narval.sh  array_prepfeat.sh  array_prepfeat_narval.sh  array_preprocess.sh  array_preprocess_narval.sh  clean.sh  copy_cc2local.sh  get_indexes.sh  preprocess.sh  test_job.sh
