[metadata]
name = eeg_raw_to_classification
url = https://github.com/alberto-jj/raw_to_classification
author = Alberto Jaramillo & Yorguin Mantilla
maintainer = Alberto Jaramillo & Yorguin Mantilla
description = Automated eeg pipeline
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Programming Language :: Python :: 3
  Intended Audience :: Science/Research
  Development Status :: 3 - Alpha
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = eeg_raw_to_classification/_version.py
versionfile_build = eeg_raw_to_classification/_version.py
tag_prefix = 
parentdir_prefix = 